# hatgpu

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  compile-shaders.sh
scenes/: clustered_demo.json  monkey-face.json  sponza.json
shaders/: shader.frag  shader.vert
shaders/aabb/: shader.frag  shader.vert
shaders/bdpt/: main.comp
shaders/compute/: aabb_gen.comp  cull_lights.comp
shaders/forward/: shader.frag
shaders/layers/: aabb.vert
src/: efvk_types.h  hatpch.cpp  hatpch.h  initialize_vma.cpp  initializers.cpp  initializers.h  main.cpp  types.h
src/application/: Application.cpp  Application.h  BdptRenderer.cpp  BdptRenderer.h  Constants.h  DrawCtx.h  EfvkRenderer.cpp  EfvkRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  HatGpuRenderer.cpp  HatGpuRenderer.h  HelloTriangle.cpp  HelloTriangle.h  InputManager.cpp  InputManager.h  Layer.cpp  Layer.h  Renderer.h
src/geometry/: Aabb.h  Hittable.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
src/geometry/prim/: Box.cpp  Box.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h
src/renderers/: BdptRenderer.cpp  BdptRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h
src/renderers/layers/: AabbLayer.cpp  AabbLayer.h
src/renderers/overlays/: AabbLayer.cpp  AabbLayer.h
src/scene/: Camera.h  Scene.cpp  Scene.h
src/texture/: Texture.cpp
src/ui/: Toggle.h
src/util/: Random.cpp  Random.h  Time.cpp  Time.h
src/vk/: allocator.cpp  allocator.h  ctx.h  deleter.h  gpu_texture.h  initializers.cpp  initializers.h  shader.cpp  shader.h  texture.h  types.h  upload_context.cpp  upload_context.h
